<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncreaseStock_v2">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/headerIncreaseStock"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="275sp"
        android:layout_height="45sp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Search product"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/buttonIncreaseStock"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="360dp"
        android:text="@string/buttonIncreaseStock"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="70dp"
        android:text="@string/buttonCancel"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonIncreaseStock"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listViewProductSearch"
        android:layout_width="352dp"
        android:layout_height="325dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch">

    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintViewSelectedProduct"
        android:layout_width="361dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch">

        <Spinner
            android:id="@+id/spinnerBranch"
            android:layout_width="270dp"
            android:layout_height="31dp"
            android:layout_marginStart="15dp"
            android:entries="@array/listBranches"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView14" />

        <TextView
            android:id="@+id/textViewExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/labelSelectDate"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectedInStock" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelProduct"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSelectedName"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/labelProduct"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/labelPackaging"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectedName" />

        <TextView
            android:id="@+id/textViewSelectedPackaging"
            android:layout_width="252dp"
            android:layout_height="26dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/labelPackaging"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginTop="30dp"
            android:text="@string/labelBranch"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/labelInStock"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textViewSelectedInStock"
            android:layout_width="272dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/labelInStock"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/spinnerBranch" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/labelQuantity"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/labelExpiryDate"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="264dp"
            android:layout_height="39dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textViewExpiryDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextSearch"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    <EditText
        android:id="@+id/editTextExpiryDate"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="651dp"
        android:layout_marginEnd="411dp"
        android:ems="10"
        android:inputType="date"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>